# rag-system

./: .gitignore  README.md  pyproject.toml
docs/clean-docs/: attention.md  bert.md  language-model-learning.md  robert.md  transfer-learning.md
docs/parsed_json/: A_Robustly_Optimized_BERT.docling.json  Attention_is_all_you_need.docling.json  Limits_of_transfer_learning.docling.json  Pre-training_of_Bidirectional_Transformers.docling.json
docs/reports/: academic_literature_rag_report.html
scripts/: generate_report.py
src/: chat_ui.py  eval_ui.py  evaluator.py  pro_app.py  vector_space_visualizer.py
src/assets/: chat_ui.css
src/chunkers/: semantic_chunker.py
src/config/: settings.py
src/embedders/: embedding_generator.py
src/evaluation/: eval.py  pro_eval.py  tests.jsonl
src/helpers/: conversation_memory.py  guardrails.py  llm_helper.py  test_conversation_memory.py  test_guardrails.py
src/ingestion/: doc_embedder.py  docling_doc_cleaner.py  docling_json_loader.py  docling_pdf_loader.py  ingestion_pipeline.py  semantic_chunker.py  vector_store.py
src/loaders/: docling_pdf_loader.py
src/pipeline/: ingestion_pipeline.py
src/preprocessing/: document_cleaner.py
src/prompts/: prompts.py
src/retrieval/: hybrid_retrieval.py  query_router.py  test_query_router.py
src/router/: query_router.py
src/schema/: document.py
src/vector_store/: qdrant_store.py
src/visualization/: embeddings_visualizer.py
