[project]
name = "rag-system"
version = "0.1.0"
description = "RAG system for ingesting pdf files and ansering questions based on them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "docling>=2.110.0",
    "dotenv>=0.9.9",
    "gradio>=6.20.0",
    "langchain>=1.3.11",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.3.3",
    "langchain-text-splitters>=1.1.2",
    "litellm>=1.91.1",
    "plotly>=6.8.0",
    "pymupdf>=1.28.0",
    "pypdf>=6.14.2",
    "qdrant-client>=1.18.0",
    "sentence-transformers>=5.6.0",
]

[tool.uv.workspace]
members = [
    "parser",
    "doc-parser",
]
