[project]
name = "rag-system"
version = "0.1.0"
description = "RAG system for ingesting pdf files and ansering questions based on them"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "docling>=2.110.0",
    "gradio>=6.20.0",
    "litellm>=1.91.1",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "plotly>=6.8.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",
    "qdrant-client>=1.18.0",
    "scikit-learn>=1.0.0",
    "sentence-transformers>=5.6.0",
    "tenacity>=8.0.0",
    "torch>=2.0.0",
    "transformers>=4.0.0",
]
